<resources>
    <string name="app_name">Admin Smart Parking</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_logout">Log out</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_admin_id">ID</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="server_api_root">"http://54.68.124.173:8080/SmartParking/api/"</string>
    <string name="server_api_user_getAllUsers">"admin/getAllUsers"</string>
    <string name="server_api_user_addUser">"admin/addNewUser"</string>
    <string name="server_api_user_updateUser">"admin/updateUser"</string>
    <string name="server_api_user_deleteUser">"admin/deleteUser"</string>

    <string name="server_api_sensor_status">"admin/getNumberSensorsByStatus"</string>

    <string name="server_api_admin_authenticate">"admin/authenticate"</string>
    <string name="server_api_sensor_getAllSensors">"sensor/getAllSensors"</string>
    <string name="server_api_sensor_updateSensor">"admin/updateSensor"</string>
    <string name="server_api_sensor_addSensor">"admin/addNewSensor"</string>
    <string name="server_api_sensor_deleteSensor">"admin/deleteSensor"</string>

    <string name="intent_result_name_admin_id">"admin id"</string>
    <string name="intent_result_edit_action">edit action</string>
    <string name="intent_result_edit_action_update">update action</string>
    <string name="intent_result_edit_action_delete">delete action</string>

    <string name="intent_launch_action">launch action</string>
    <string name="intent_launch_action_add">add action</string>
    <string name="intent_launch_action_view">view action</string>

    <string name="title_nav_statistic">"Statistic"</string>
    <string name="title_nav_sensor_management">"Sensor Management"</string>
    <string name="title_nav_admin_management">"Admin Management"</string>

    <string name="log_in_user_name">loginName</string>
    <string name="log_in_user_password">password</string>

    <string name="sensor_list_root">sensorList</string>
    <string name="sensor_list_data_id">idSensor</string>
    <string name="sensor_list_data_location">location</string>
    <string name="sensor_list_data_status">status</string>
    <string name="sensor_list_data_zip">zipcode</string>
    <string name="sensor_list_data_cost">cost</string>


    <string name="user_list_root">userList</string>
    <string name="user_list_data_id">idUser</string>
    <string name="user_list_data_name">name</string>
    <string name="user_list_data_address">address</string>
    <string name="user_list_data_loginName">loginName</string>
    <string name="user_list_data_password">password</string>

    <string name="sensor_status_root">sensorStatusList</string>
    <string name="sensor_status_free">numberSensorsFree</string>
    <string name="sensor_status_occupied">numberSensorsOccupied</string>
    <string name="sensor_status_unavailable">numberSensorsUnavailable</string>
    <string name="sensor_status_inactive">numberSensorsInactive</string>

    <string name="title_activity_edit_sensor">EditSensorActivity</string>
    <string name="prompt_edit_sensor_latitude">Latitude</string>
    <string name="prompt_edit_sensor_longitude">Longitude</string>
    <string name="prompt_edit_sensor_status">Status</string>
    <string name="prompt_edit_sensor_cost">Cost</string>

    <string name="title_activity_edit_admin">Edit Admin Activity</string>
    <string name="prompt_edit_admin_name">Name</string>
    <string name="prompt_edit_admin_address">Address</string>
    <string name="prompt_edit_admin_loginName">Login Name</string>
    <string name="prompt_edit_admin_password">Password</string>
    <string name="prompt_edit_admin_password_again">Password Again</string>

    <string name="prompt_warning_delete_sensor_title">Delete sensor</string>
    <string name="prompt_warning_delete_sensor_message">Are you sure you want to delete this sensor on the system?</string>

    <string name="prompt_warning_update_sensor_title">Update sensor</string>
    <string name="prompt_warning_update_sensor_message">Are you sure you want to update this sensor on the system?</string>

    <string name="prompt_warning_add_sensor_title">Add sensor</string>
    <string name="prompt_warning_add_sensor_message">Are you sure you want to add this sensor on the system?</string>

    <string name="prompt_warning_add_admin_title">Add Admin</string>
    <string name="prompt_warning_add_admin_message">Are you sure you want to add this Admin on the system?</string>

    <string name="prompt_warning_delete_admin_title">Delete Admin</string>
    <string name="prompt_warning_delete_admin_message">Are you sure you want to delete this Admin on the system?</string>

    <string name="prompt_warning_update_admin_title">Update Admin</string>
    <string name="prompt_warning_update_admin_message">Are you sure you want to update this Admin on the system?</string>

    <string-array name="sensor_status_array">
        <item>Undefined</item>
        <item>Free</item>
        <item>Occupied</item>
        <item>Unavailable</item>
        <item>Inactive</item>
    </string-array>
</resources>
