<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.project.team.parking.smart.smartparkingadmin.EditSensorActivity">

    <ProgressBar
        android:id="@+id/update_sensor_info_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_gravity="center|top"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:id="@+id/edit_sensor_info_form">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <AutoCompleteTextView
                android:id="@+id/sensor_latitude_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_edit_sensor_latitude"
                android:inputType="numberDecimal|numberSigned"
                android:maxLines="1"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <AutoCompleteTextView
                android:id="@+id/sensor_longitude_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_edit_sensor_longitude"
                android:inputType="numberDecimal|numberSigned"
                android:maxLines="1"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/prompt_edit_sensor_status"
                android:layout_gravity="center_vertical|left" />

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/sensor_status_spinner"
                android:entries="@array/sensor_status_array" />

        </LinearLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <AutoCompleteTextView
                android:id="@+id/sensor_cost_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_edit_sensor_cost"
                android:inputType="numberDecimal"
                android:maxLines="1"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:width="100dp"
                android:text="Update"
                android:id="@+id/sensor_update_button"
                android:onClick="onUpdateBtnClick"
                android:visibility="gone" />

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:width="100dp"
                android:text="Delete"
                android:id="@+id/sensor_delete_button"
                android:onClick="onDeleteBtnClick"
                android:visibility="gone" />

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:width="100dp"
                android:text="Add"
                android:id="@+id/sensor_add_button"
                android:onClick="onAddBtnClick"
                android:visibility="gone" />
        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <fragment
                android:id="@+id/map"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                class="com.google.android.gms.maps.SupportMapFragment" />
        </FrameLayout>

    </LinearLayout>

</LinearLayout>
